--- a/Linearly_Seperable_2.ipynb
+++ b/Linearly_Seperable_2.ipynb
@@ -43,6 +43,7 @@
         "id": "KKXh968gaOI8"
       },
       "source": [
+        "#importing libraries\n",
         "import tensorflow as tf\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
@@ -52,7 +53,7 @@
         "import seaborn as sns\n",
         "from mlxtend.plotting import plot_decision_regions"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
